Bug 1319353 - CreateCSSNode: Copy classes from the parent style context to its corresponding node in the path r=stransky+263117 a=jcristau

This is necessary for GTK to match CSS rules against classes on ancestor nodes
of style contexts constructed from paths.

It can be tested with the following in ~/.config/gtk-3.0/gtk.css

tooltip.background label {padding: 100px;}

MozReview-Commit-ID: EUQ9ndeSl1Z